--- a/calendar/src/main/resources/application.properties
+++ b/calendar/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=calendar
+spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
