Add security configuration and classes.
In details: application.properties is updated for configuring keycloak.
The main class that handle the security is SecurityConfig.
BookingController is update for handle the authentication of client.

--- a/calendar/src/main/resources/application.properties
+++ b/calendar/src/main/resources/application.properties
@@ -4,3 +4,16 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#With this you can see the security trace:
+#logging.level.org.springframework.security=TRACE
+
+#change the server port, because keycloak use the port 8080
+server.port=8081
+
+spring.security.oauth2.client.registration.keycloak.client-id=login-app
+spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.keycloak.scope=openid
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/calendar
+spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/calendar
