--- a/calendar/src/main/resources/application.properties
+++ b/calendar/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=calendar
 spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #With this you can see the security trace:
