--- a/calendar/src/main/resources/application.properties
+++ b/calendar/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=calendar
-spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
+#spring.datasource.url=jdbc:postgresql://db:5432/calendar
+#la classica è quella immediatamente sotto:
+#spring.datasource.url=jdbc:postgresql://localhost:5432/calendar
+spring.datasource.url=jdbc:postgresql://192.168.0.22:5432/calendar
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #With this you can see the security trace:
@@ -14,6 +17,8 @@ server.port=8081
 spring.security.oauth2.client.registration.keycloak.client-id=login-app
 spring.security.oauth2.client.registration.keycloak.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.keycloak.scope=openid
-spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/calendar
+#spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8080/realms/calendar
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://192.168.0.23:8080/realms/calendar
 spring.security.oauth2.client.provider.keycloak.user-name-attribute=preferred_username
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/calendar
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/calendar
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.0.23:8080/realms/calendar
